--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   firebase_core: ^3.6.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
+  intl: ^0.20.1
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
