--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   intl: ^0.20.1
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
